# pico-ntpclock

./: CMakeLists.txt  Makefile  README.md  enc28j60.c  enc28j60.h  enc28j60io.c  enc28j60io.h  ip.c  ip.cpp  ip.h  lcd.c  lcd.h  main.c  main.cpp  ntpclock.pro
